--- a/modules/books/client/views/view-book.client.view.html
+++ b/modules/books/client/views/view-book.client.view.html
@@ -1,11 +1,12 @@
 <section>
-  <ul>
-      <li> {{vm.book.titre}}</li>
-      <li> {{vm.book.auteur}}</li>
-      <li> {{vm.book.maison}}</li>
-      <li> {{vm.book.page}}</li>
-      <li> {{vm.book.annee}}</li>
-  </ul>
-
+    <div class="jumbotron">
+        <h1>{{vm.book.titre}}</h1>
+      <ul>
+          <li> Ecrit par {{vm.book.auteur}}</li>
+          <li> Publié par {{vm.book.maison}}</li>
+          <li> Il contient {{vm.book.page}} pages</li>
+          <li> Il a été publié en {{vm.book.annee}}</li>
+      </ul>
+  </div>
 
 </section>
