--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,6 +1,19 @@
 <section>
-  <div class="jumbotron">
-    <h1> Prêt à booker </h1>
-    <p> Bienvenue sur le site prêt à booker, ce site permet le partage de livres éducatifs
+  <div class="row">
+    <div class="col-md-5">
+      <span id="book" class="glyphicon glyphicon-book" aria-hidden="true"></span>
+    </div>
+    <div class="col-md-7">
+      <div class="jumbotron">
+	<h1> Prêt à booker </h1>
+	<p> Cher lecteur, chère lectrice, <br />
+	  Cette plateforme est faite pour tout un chacun, lecteur aguérri, novice ou simple curieux. <br />
+	  Pour l'utilisation, rien de plus facile. Inscris toi en cliquant sur l'onglet inscription si ce n'est déjà fait. Une fois ton compte crée, libre à toi de prêter les livres de ta bibliothèque ou à emprunter ceux des autres utilisateurs. Quand tu as lu le livre qui n'est pas encore dans la sélection. Tu dois l'inscrire en notant les informations pratiques. Chacun peut noter son avis et faire une critique. <br />
+	  L'utilité est donc d'échanger les livres et donner son avis. <br />
+	  Bonne lecture et bon amusement à tous, <br />
+	  L'équipe de prêt à booker
+	</p>
+    </div>
   </div>
 </section>
+ 
