Il faut être connecté pour ajouter une critique

--- a/modules/books/client/views/view-book.client.view.html
+++ b/modules/books/client/views/view-book.client.view.html
@@ -1,4 +1,4 @@
-section>
+<section>
     <div class="jumbotron">
         <h1>{{vm.book.titre}}</h1>
       <ul>
@@ -8,13 +8,13 @@ section>
           <li> Il a été publié en {{vm.book.annee}}</li>
       </ul>
   </div>
-  <div class="col-md-12">
-    <form name="vm.form.critiqueForm" class="form-horizontal" ng-submit="vm.save(vm.form.critiqueForm.$valid)" novalidate>
+  <div class="col-md-12" ng-if="vm.authentication.user" >
+    <form name="vm.form.bookForm" class="form-horizontal" ng-submit="vm.save(vm.form.bookForm.$valid)" novalidate>
       <fieldset>
         <div class="form-group" show-errors>
           <label class="control-label" for="titre">Titre</label>
           <input name="titre" type="text" ng-model="vm.book.title" id="titre" class="form-control" placeholder="Titre" required>
-          <div ng-messages="vm.form.critiqueForm.titre.$error" role="alert">
+          <div ng-messages="vm.form.bookForm.titre.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Il faut un titre</p>
           </div>
         </div>
@@ -23,16 +23,16 @@ section>
           <textarea name="avis" rows="10" type="text" ng-model="vm.book.avis" id="avis" class="form-control" placeholder="Avis" required></textarea>
           <div ng-messages="vm.form.bookForm.avis.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Il faut un
-              auteur</p>
+              avis</p>
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label class="control-label" for="note">Nombre de pages</label>
+          <label class="control-label" for="note">Note</label>
           <input name="note" type="number" min="0" max="5" ng-model="vm.book.note" id="note"
-          class="form-control" placeholder="Nombre de pages" required>
-          <div ng-messages="vm.form.critiqueForm.page.$error" role="alert">
+          class="form-control" placeholder="note" required>
+          <div ng-messages="vm.form.bookForm.note.$error" role="alert">
               <p class="help-block error-text" ng-message="required">Il faut une
-              maison d'éditon</p>
+              note</p>
           </div>
         </div>
         <div class="form-group">
@@ -44,6 +44,5 @@ section>
     <div ng-repeat="x in vm.book.critique">
       {{x.title}}
       {{x.avis}}
-      
       </div>
 </section>
